--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -12,6 +13,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "build": "webpack --mode development"
+    "build": "NODE_ENV=development  webpack ",
+    "deploy": "NODE_ENV=production  webpack "
   }
 }
