--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "html-withimg-loader": "^0.1.16",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss-loader": "^7.3.3",
